--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
   "compilerOptions": {
-    "jsx": "react",
-    "target": "es6",
+    "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
 
     "baseUrl": "./",
-    "outDir": "./build",
+    "outDir": "./dist",
 
     "strict": true,
     "allowJs": false,
+    "declaration": true,
+    
     "noImplicitAny": false,
     "esModuleInterop": true
   },
