--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hooklike",
-  "version": "0.0.5-alpha4",
+  "version": "0.0.5",
   "main": "dist/index.js",
   "types": "dist/index.d.js",
   "scripts": {
